MDEV-5926: EITS: Histogram estimates for column=least_possible_value are wrong [Attempt #2] - Use a new selectivity calculation formula in Histogram::point_selectivity.   The formula is different from the old one because it was developed from scratch.   it doesn't have any possible division-by-zero problems.